{
    "name": "IA_Gameplay",
    "maps": [
        {
            "name": "Pointer",
            "id": "fa5c5c20-28b2-47e8-8637-feceec2af19d",
            "actions": [
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "87fdf223-1d6e-41c2-9760-6acbee9e1272",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "ec8696a3-7d82-4819-8cbc-ed66f627dbb6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "96fac100-c582-4b33-8fcc-c18daa2459cc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "30001a74-d8b9-4b7c-bc8e-009d596721d9",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d64c99c-468c-4e63-b068-94052a3dbd01",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88311267-a69d-498a-9d67-7323b83ccfc7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": []
        }
    ]
}